#
# Copyright 2011 Free Software Foundation, Inc.
# 
# This file is part of GNU Radio
# 
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
# 
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.
# 

include $(top_srcdir)/Makefile.common

grcblocksdir = $(grc_blocksdir)

dist_grcblocks_DATA = \
	blocks_add_const.xml		\
	blocks_block_tree.xml		\
	blocks_add.xml			\
	blocks_subtract.xml		\
	blocks_delay.xml		\
	blocks_noise_source.xml		\
	blocks_stream_selector.xml	\
	blocks_multiply_const.xml	\
	blocks_divide.xml		\
	blocks_multiply.xml		\
	blocks_signal_source.xml